ReverseEngineering/scriptc/scriptc_syntax.output
State 289 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 constname: IDENTIFIER

    2 constant_expression: OCTALconstant
    3                    | HEXconstant
    4                    | INTEGERconstant
    5                    | FLOATINGconstant
    6                    | STRING_LITERAL

    7 namespace_expression: IDENTIFIER
    8                     | namespace_expression CLCL_OP IDENTIFIER

    9 primary_expression: namespace_expression
   10                   | constant_expression
   11                   | '(' expression ')'

   12 arg_expression: '?' primary_expression

   13 ptr_expression: '*' primary_expression
   14               | '*' primary_expression ':' primary_expression

   15 cast_expression: primary_expression ':' primary_expression

   16 objattr_expression: postfix_expression '[' expression ']'
   17                   | postfix_expression '.' constname

   18 objcall_expression: postfix_expression '[' expression ']' '(' ')'
   19                   | postfix_expression '[' expression ']' '(' argument_expression_list ')'
   20                   | postfix_expression '.' constname '(' ')'
   21                   | postfix_expression '.' constname '(' argument_expression_list ')'

   22 call_expression: primary_expression '(' ')'
   23                | primary_expression '(' argument_expression_list ')'

   24 postfix_expression: primary_expression
   25                   | execquery_expression
   26                   | objattr_expression
   27                   | objcall_expression
   28                   | call_expression
   29                   | arg_expression
   30                   | ptr_expression
   31                   | cast_expression

   32 argument_expression_list: assignment_expression
   33                         | argument_expression_list ',' assignment_expression

   34 lvalue_expression: namespace_expression
   35                  | arg_expression
   36                  | ptr_expression

   37 unary_expression: postfix_expression
   38                 | INC_OP lvalue_expression
   39                 | DEC_OP lvalue_expression
   40                 | lvalue_expression INC_OP
   41                 | lvalue_expression DEC_OP
   42                 | unary_operator postfix_expression
   43                 | '&' namespace_expression

   44 unary_operator: '+'
   45               | '-'
   46               | '~'
   47               | '!'

   48 multiplicative_expression: unary_expression
   49                          | multiplicative_expression '*' unary_expression
   50                          | multiplicative_expression '/' unary_expression
   51                          | multiplicative_expression '%' unary_expression

   52 additive_expression: multiplicative_expression
   53                    | additive_expression '+' multiplicative_expression
   54                    | additive_expression '-' multiplicative_expression

   55 shift_expression: additive_expression
   56                 | shift_expression LEFT_OP additive_expression
   57                 | shift_expression RIGHT_OP additive_expression

   58 relational_expression: shift_expression
   59                      | relational_expression '<' shift_expression
   60                      | relational_expression '>' shift_expression
   61                      | relational_expression LE_OP shift_expression
   62                      | relational_expression GE_OP shift_expression

   63 equality_expression: relational_expression
   64                    | equality_expression EQ_OP relational_expression
   65                    | equality_expression NE_OP relational_expression

   66 and_expression: equality_expression
   67               | and_expression '&' equality_expression

   68 exclusive_or_expression: and_expression
   69                        | exclusive_or_expression '^' and_expression

   70 inclusive_or_expression: exclusive_or_expression
   71                        | inclusive_or_expression '|' exclusive_or_expression

   72 logical_and_expression: inclusive_or_expression

   73 @1: /* empty */

   74 logical_and_expression: logical_and_expression @1 AND_OP inclusive_or_expression

   75 logical_or_expression: logical_and_expression

   76 @2: /* empty */

   77 logical_or_expression: logical_or_expression @2 OR_OP logical_and_expression

   78 assignment_expression: logical_or_expression
   79                      | objattr_expression '=' assignment_expression
   80                      | lvalue_expression assignment_operator assignment_expression

   81 assignment_operator: '='
   82                    | MUL_ASSIGN
   83                    | DIV_ASSIGN
   84                    | MOD_ASSIGN
   85                    | ADD_ASSIGN
   86                    | SUB_ASSIGN
   87                    | LEFT_ASSIGN
   88                    | RIGHT_ASSIGN
   89                    | AND_ASSIGN
   90                    | XOR_ASSIGN
   91                    | OR_ASSIGN

   92 expression: assignment_expression
   93           | expression ',' assignment_expression

   94 statement: const_definition
   95          | labeled_statement
   96          | compound_statement
   97          | expression_statement
   98          | selection_statement
   99          | iteration_statement
  100          | jump_statement
  101          | loadquery_statement
  102          | textblock_statement

  103 @3: /* empty */

  104 labeled_statement: CASE defed_constant @3 ':' statement

  105 @4: /* empty */

  106 labeled_statement: DEFAULT @4 ':' statement

  107 compound_statement: '{' '}'
  108                   | '{' statement_list '}'

  109 statement_list: statement
  110               | statement_list statement

  111 expression_statement: ';'
  112                     | expression ';'
  113                     | VAR expression ';'

  114 ifexp: expression

  115 selection_statement: IF '(' ifexp ')' statement

  116 @5: /* empty */

  117 selection_statement: IF '(' ifexp ')' statement ELSE @5 statement

  118 @6: /* empty */

  119 selection_statement: SWITCH '(' expression @6 ')' statement

  120 for1thexp_statement: expression ';'
  121                    | ';'

  122 for2thexp_statement: expression ';'
  123                    | ';'

  124 @7: /* empty */

  125 @8: /* empty */

  126 iteration_statement: WHILE '(' @7 expression @8 ')' statement

  127 @9: /* empty */

  128 @10: /* empty */

  129 @11: /* empty */

  130 iteration_statement: DO @9 statement WHILE '(' @10 expression @11 ')' ';'
  131                    | FOR '(' for1thexp_statement for2thexp_statement ')' statement

  132 @12: /* empty */

  133 @13: /* empty */

  134 iteration_statement: FOR '(' for1thexp_statement for2thexp_statement @12 expression @13 ')' statement

  135 jump_statement: CONTINUE ';'
  136               | BREAK ';'
  137               | RETURN expression ';'

  138 translation_unit: external_declaration
  139                 | translation_unit external_declaration

  140 external_declaration: extern_declaration
  141                     | include_declaration
  142                     | function_declaration
  143                     | const_definition
  144                     | var_definition
  145                     | function_definition
  146                     | namespace_definition

  147 extern_declaration: EXTERN STRING_LITERAL defed_constant IDENTIFIER '(' ')' ';'
  148                   | EXTERN STRING_LITERAL defed_constant IDENTIFIER '(' integer_list ')' ';'
  149                   | EXTERN STRING_LITERAL defed_constant IDENTIFIER '(' ')' IDENTIFIER ';'
  150                   | EXTERN STRING_LITERAL defed_constant IDENTIFIER '(' integer_list ')' IDENTIFIER ';'

  151 integer_list: defed_constant
  152             | integer_list ',' defed_constant

  153 include_declaration: INCLUDE STRING_LITERAL ';'

  154 function_declaration: FUNCTION function_list ';'

  155 function_list: namespace_expression
  156              | function_list ',' namespace_expression

  157 const_definition: CONSTKEY const_list ';'

  158 const_list: IDENTIFIER '=' defed_constant
  159           | const_list ',' IDENTIFIER '=' defed_constant

  160 defed_constant: OCTALconstant
  161               | HEXconstant
  162               | INTEGERconstant
  163               | FLOATINGconstant
  164               | STRING_LITERAL
  165               | IDENTIFIER

  166 var_definition: VAR var_list ';'

  167 var_list: IDENTIFIER
  168         | var_list ',' IDENTIFIER
  169         | IDENTIFIER '=' defed_constant
  170         | var_list ',' IDENTIFIER '=' defed_constant

  171 @14: /* empty */

  172 namespace_definition: namespace_keyword namespace_expression @14 '{' namespace_body '}'

  173 namespace_keyword: NAMESPACE
  174                  | CLASS

  175 namespace_body: namespace_body_list
  176               | namespace_body namespace_body_list

  177 namespace_body_list: function_declaration
  178                    | const_definition
  179                    | var_definition
  180                    | function_definition
  181                    | namespace_definition

  182 arg_list: IDENTIFIER
  183         | arg_list ',' IDENTIFIER

  184 function_head: FUNCTION IDENTIFIER
  185              | FUNCTION IDENTIFIER '(' ')'
  186              | FUNCTION IDENTIFIER '(' arg_list ')'

  187 function_definition: function_head compound_statement

  188 @15: /* empty */

  189 @16: /* empty */

  190 loadquery_statement: DEFQUERY '(' INTEGERconstant ',' @15 select_no_parens @16 ')' ';'

  191 execquery_expression: EXECQUERY '(' INTEGERconstant ',' a_expr ')'

  192 select_no_parens: simple_select
  193                 | simple_select sort_clause

  194 simple_select: SELECT target_list from_clause join_clause

  195 target_list: IDENTIFIER
  196            | target_list ',' IDENTIFIER

  197 from_clause: FROM from_list

  198 @17: /* empty */

  199 from_list: IDENTIFIER @17 where_clause

  200 @18: /* empty */

  201 from_list: from_list ',' IDENTIFIER @18 where_clause

  202 where_clause: WHERE a_expr
  203             | /* empty */

  204 join_clause: JOIN ON a_expr
  205            | /* empty */

  206 sort_clause: ORDER BY sortby

  207 a_expr: logical_or_expression

  208 sortby: a_expr ASC
  209       | a_expr DESC
  210       | a_expr
  211       | a_expr MAX
  212       | a_expr MIN

  213 textblock_statement: TEXTBLOCK


Terminals, with rules where they appear

$end (0) 0
'!' (33) 47
'%' (37) 51
'&' (38) 43 67
'(' (40) 11 18 19 20 21 22 23 115 117 119 126 130 131 134 147 148 149
    150 185 186 190 191
')' (41) 11 18 19 20 21 22 23 115 117 119 126 130 131 134 147 148 149
    150 185 186 190 191
'*' (42) 13 14 49
'+' (43) 44 53
',' (44) 33 93 152 156 159 168 170 183 190 191 196 201
'-' (45) 45 54
'.' (46) 17 20 21
'/' (47) 50
':' (58) 14 15 104 106
';' (59) 111 112 113 120 121 122 123 130 135 136 137 147 148 149 150
    153 154 157 166 190
'<' (60) 59
'=' (61) 79 81 158 159 169 170
'>' (62) 60
'?' (63) 12
'[' (91) 16 18 19
']' (93) 16 18 19
'^' (94) 69
'{' (123) 107 108 172
'|' (124) 71
'}' (125) 107 108 172
'~' (126) 46
error (256)
IDENTIFIER (258) 1 7 8 147 148 149 150 158 159 165 167 168 169 170
    182 183 184 185 186 195 196 199 201
STRING_LITERAL (259) 6 147 148 149 150 153 164
FLOATINGconstant (260) 5 163
INTEGERconstant (261) 4 162 190 191
OCTALconstant (262) 2 160
HEXconstant (263) 3 161
INC_OP (264) 38 40
DEC_OP (265) 39 41
LEFT_OP (266) 56
RIGHT_OP (267) 57
LE_OP (268) 61
GE_OP (269) 62
EQ_OP (270) 64
NE_OP (271) 65
CLCL_OP (272) 8
AND_OP (273) 74
OR_OP (274) 77
MUL_ASSIGN (275) 82
DIV_ASSIGN (276) 83
MOD_ASSIGN (277) 84
ADD_ASSIGN (278) 85
SUB_ASSIGN (279) 86
LEFT_ASSIGN (280) 87
RIGHT_ASSIGN (281) 88
AND_ASSIGN (282) 89
XOR_ASSIGN (283) 90
OR_ASSIGN (284) 91
EXTERN (285) 147 148 149 150
VAR (286) 113 166
FUNCTION (287) 154 184 185 186
CLASS (288) 174
NAMESPACE (289) 173
INCLUDE (290) 153
TEXTBLOCK (291) 213
CONSTKEY (292) 157
CASE (293) 104
DEFAULT (294) 106
IF (295) 115 117
ELSE (296) 117
SWITCH (297) 119
WHILE (298) 126 130
DO (299) 130
FOR (300) 131 134
CONTINUE (301) 135
BREAK (302) 136
RETURN (303) 137
SELECT (304) 194
FROM (305) 197
WHERE (306) 202
JOIN (307) 204
ORDER (308) 206
BY (309) 206
ASC (310) 208
DESC (311) 209
MAX (312) 211
MIN (313) 212
ON (314) 204
DEFQUERY (315) 190
EXECQUERY (316) 191


Nonterminals, with rules where they appear

$accept (86)
    on left: 0
constname (87)
    on left: 1, on right: 17 20 21
constant_expression (88)
    on left: 2 3 4 5 6, on right: 10
namespace_expression (89)
    on left: 7 8, on right: 8 9 34 43 155 156 172
primary_expression (90)
    on left: 9 10 11, on right: 12 13 14 15 22 23 24
arg_expression (91)
    on left: 12, on right: 29 35
ptr_expression (92)
    on left: 13 14, on right: 30 36
cast_expression (93)
    on left: 15, on right: 31
objattr_expression (94)
    on left: 16 17, on right: 26 79
objcall_expression (95)
    on left: 18 19 20 21, on right: 27
call_expression (96)
    on left: 22 23, on right: 28
postfix_expression (97)
    on left: 24 25 26 27 28 29 30 31, on right: 16 17 18 19 20 21 37
    42
argument_expression_list (98)
    on left: 32 33, on right: 19 21 23 33
lvalue_expression (99)
    on left: 34 35 36, on right: 38 39 40 41 80
unary_expression (100)
    on left: 37 38 39 40 41 42 43, on right: 48 49 50 51
unary_operator (101)
    on left: 44 45 46 47, on right: 42
multiplicative_expression (102)
    on left: 48 49 50 51, on right: 49 50 51 52 53 54
additive_expression (103)
    on left: 52 53 54, on right: 53 54 55 56 57
shift_expression (104)
    on left: 55 56 57, on right: 56 57 58 59 60 61 62
relational_expression (105)
    on left: 58 59 60 61 62, on right: 59 60 61 62 63 64 65
equality_expression (106)
    on left: 63 64 65, on right: 64 65 66 67
and_expression (107)
    on left: 66 67, on right: 67 68 69
exclusive_or_expression (108)
    on left: 68 69, on right: 69 70 71
inclusive_or_expression (109)
    on left: 70 71, on right: 71 72 74
logical_and_expression (110)
    on left: 72 74, on right: 74 75 77
@1 (111)
    on left: 73, on right: 74
logical_or_expression (112)
    on left: 75 77, on right: 77 78 207
@2 (113)
    on left: 76, on right: 77
assignment_expression (114)
    on left: 78 79 80, on right: 32 33 79 80 92 93
assignment_operator (115)
    on left: 81 82 83 84 85 86 87 88 89 90 91, on right: 80
expression (116)
    on left: 92 93, on right: 11 16 18 19 93 112 113 114 119 120 122
    126 130 134 137
statement (117)
    on left: 94 95 96 97 98 99 100 101 102, on right: 104 106 109 110
    115 117 119 126 130 131 134
labeled_statement (118)
    on left: 104 106, on right: 95
@3 (119)
    on left: 103, on right: 104
@4 (120)
    on left: 105, on right: 106
compound_statement (121)
    on left: 107 108, on right: 96 187
statement_list (122)
    on left: 109 110, on right: 108 110
expression_statement (123)
    on left: 111 112 113, on right: 97
ifexp (124)
    on left: 114, on right: 115 117
selection_statement (125)
    on left: 115 117 119, on right: 98
@5 (126)
    on left: 116, on right: 117
@6 (127)
    on left: 118, on right: 119
for1thexp_statement (128)
    on left: 120 121, on right: 131 134
for2thexp_statement (129)
    on left: 122 123, on right: 131 134
iteration_statement (130)
    on left: 126 130 131 134, on right: 99
@7 (131)
    on left: 124, on right: 126
@8 (132)
    on left: 125, on right: 126
@9 (133)
    on left: 127, on right: 130
@10 (134)
    on left: 128, on right: 130
@11 (135)
    on left: 129, on right: 130
@12 (136)
    on left: 132, on right: 134
@13 (137)
    on left: 133, on right: 134
jump_statement (138)
    on left: 135 136 137, on right: 100
translation_unit (139)
    on left: 138 139, on right: 0 139
external_declaration (140)
    on left: 140 141 142 143 144 145 146, on right: 138 139
extern_declaration (141)
    on left: 147 148 149 150, on right: 140
integer_list (142)
    on left: 151 152, on right: 148 150 152
include_declaration (143)
    on left: 153, on right: 141
function_declaration (144)
    on left: 154, on right: 142 177
function_list (145)
    on left: 155 156, on right: 154 156
const_definition (146)
    on left: 157, on right: 94 143 178
const_list (147)
    on left: 158 159, on right: 157 159
defed_constant (148)
    on left: 160 161 162 163 164 165, on right: 104 147 148 149 150
    151 152 158 159 169 170
var_definition (149)
    on left: 166, on right: 144 179
var_list (150)
    on left: 167 168 169 170, on right: 166 168 170
namespace_definition (151)
    on left: 172, on right: 146 181
@14 (152)
    on left: 171, on right: 172
namespace_keyword (153)
    on left: 173 174, on right: 172
namespace_body (154)
    on left: 175 176, on right: 172 176
namespace_body_list (155)
    on left: 177 178 179 180 181, on right: 175 176
arg_list (156)
    on left: 182 183, on right: 183 186
function_head (157)
    on left: 184 185 186, on right: 187
function_definition (158)
    on left: 187, on right: 145 180
loadquery_statement (159)
    on left: 190, on right: 101
@15 (160)
    on left: 188, on right: 190
@16 (161)
    on left: 189, on right: 190
execquery_expression (162)
    on left: 191, on right: 25
select_no_parens (163)
    on left: 192 193, on right: 190
simple_select (164)
    on left: 194, on right: 192 193
target_list (165)
    on left: 195 196, on right: 194 196
from_clause (166)
    on left: 197, on right: 194
from_list (167)
    on left: 199 201, on right: 197 201
@17 (168)
    on left: 198, on right: 199
@18 (169)
    on left: 200, on right: 201
where_clause (170)
    on left: 202 203, on right: 199 201
join_clause (171)
    on left: 204 205, on right: 194
sort_clause (172)
    on left: 206, on right: 193
a_expr (173)
    on left: 207, on right: 191 202 204 208 209 210 211 212
sortby (174)
    on left: 208 209 210 211 212, on right: 206
textblock_statement (175)
    on left: 213, on right: 102


state 0

    0 $accept: . translation_unit $end

    EXTERN     shift, and go to state 1
    VAR        shift, and go to state 2
    FUNCTION   shift, and go to state 3
    CLASS      shift, and go to state 4
    NAMESPACE  shift, and go to state 5
    INCLUDE    shift, and go to state 6
    CONSTKEY   shift, and go to state 7

    translation_unit      go to state 8
    external_declaration  go to state 9
    extern_declaration    go to state 10
    include_declaration   go to state 11
    function_declaration  go to state 12
    const_definition      go to state 13
    var_definition        go to state 14
    namespace_definition  go to state 15
    namespace_keyword     go to state 16
    function_head         go to state 17
    function_definition   go to state 18


state 1

  147 extern_declaration: EXTERN . STRING_LITERAL defed_constant IDENTIFIER '(' ')' ';'
  148                   | EXTERN . STRING_LITERAL defed_constant IDENTIFIER '(' integer_list ')' ';'
  149                   | EXTERN . STRING_LITERAL defed_constant IDENTIFIER '(' ')' IDENTIFIER ';'
  150                   | EXTERN . STRING_LITERAL defed_constant IDENTIFIER '(' integer_list ')' IDENTIFIER ';'

    STRING_LITERAL  shift, and go to state 19


state 2

  166 var_definition: VAR . var_list ';'

    IDENTIFIER  shift, and go to state 20

    var_list  go to state 21


state 3

  154 function_declaration: FUNCTION . function_list ';'
  184 function_head: FUNCTION . IDENTIFIER
  185              | FUNCTION . IDENTIFIER '(' ')'
  186              | FUNCTION . IDENTIFIER '(' arg_list ')'

    IDENTIFIER  shift, and go to state 22

    namespace_expression  go to state 23
    function_list         go to state 24


state 4

  174 namespace_keyword: CLASS .

    $default  reduce using rule 174 (namespace_keyword)


state 5

  173 namespace_keyword: NAMESPACE .

    $default  reduce using rule 173 (namespace_keyword)


state 6

  153 include_declaration: INCLUDE . STRING_LITERAL ';'

    STRING_LITERAL  shift, and go to state 25


state 7

  157 const_definition: CONSTKEY . const_list ';'

    IDENTIFIER  shift, and go to state 26

    const_list  go to state 27


state 8

    0 $accept: translation_unit . $end
  139 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 28
    EXTERN     shift, and go to state 1
    VAR        shift, and go to state 2
    FUNCTION   shift, and go to state 3
    CLASS      shift, and go to state 4
    NAMESPACE  shift, and go to state 5
    INCLUDE    shift, and go to state 6
    CONSTKEY   shift, and go to state 7
